--- a/css/main.css
+++ b/css/main.css
@@ -13797,7 +13797,7 @@ html {
 }
 
 .footer__section__article__div {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -14244,15 +14244,44 @@ html {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .footer__section__article__div {
-    width: 70%;
+    width: 55%;
     margin: 0 auto;
-    padding: 0rem !important;
+    padding: 0rem;
   }
 }
 
 @media (max-width: 768px) {
+  .footer__section__article__div {
+    width: 70%;
+    margin: 0 auto;
+    padding: 0rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__section__article__texto__p {
+    margin: 5rem 10rem 2rem 10rem;
+    height: 100%;
+    padding: 6rem 12rem;
+    font-size: 1.2rem;
+    line-height: 3rem;
+    text-align: justify;
+    border: solid black 0.5rem;
+  }
+  .footer__section__article__texto__ol {
+    margin: 5rem 10rem 2rem 10rem;
+    padding: 6rem 12rem;
+    height: 100%;
+    font-size: 1.2rem;
+    line-height: 3rem;
+    text-align: justify;
+    border: solid black 0.5rem;
+  }
+}
+
+@media (max-width: 765px) {
   .footer__section__article__texto__p {
     margin: 0rem;
     height: 100%;
